--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@
   height: 100px;
   border-radius: 50%;
 }
+
+
+.background-img {
+  height: 240px;
+  width: 240px;
+  background-image: url(images/abstract.jpeg);
+  padding: 50px;
+  background-clip: padding-box;
+  position: relative;
+  padding: 50px;
+}
