--- a/style.css
+++ b/style.css
@@ -48,3 +48,20 @@
   height: 400px;
   width: 400px;
 }
+
+.img-o {
+  height: 200px;
+  width: 200px;
+  opacity: 1;
+}
+
+.img-o-half {
+  height: 200px;
+  width: 200px;
+  opacity: .5;
+}
+.img-o-quart {
+  height: 200px;
+  width: 200px;
+  opacity: .25;
+}
