--- a/style.css
+++ b/style.css
@@ -65,3 +65,80 @@
   width: 200px;
   opacity: .25;
 }
+
+.overflow {
+  height: 100px;
+  width: 100px;
+  border: 3px solid black;
+  overflow-y: scroll;
+}
+
+.blend {
+  width: 200px;
+  height: 200px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-image: url(images/w3schools.png),linear-gradient(to right, blue 0%, white 100%);
+}
+
+.ani {
+  height: 200px;
+  width: 200px;
+  background-color: black;
+  position: relative;
+  animation-name: ani;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+  color: white;
+}
+
+@keyframes ani {
+    0%   {background-color: black; left:0px;}
+    50%  {background-color: red; left:100%;}
+    100% {background-color: black; left:0px;}
+}
+
+.align1 {
+  text-align: left;
+}
+
+.align2 {
+  text-align: right;
+}
+
+.column {
+  font-size: 20px;
+  column-count: 2;
+  column-gap: 40px;
+  column-rule: 8px dotted;
+
+}
+
+.box {
+  height: 200px;
+  width: 200px;
+  background-color: blue;
+  box-shadow: 20px 20px 50px 20px black;
+
+
+}
+
+.resizeable {
+  height: 200px;
+  width: 200px;
+  background-color: orange;
+  overflow:auto;
+  resize: both;
+}
+
+.stroke {
+  font-size: 20px;
+  text-stroke: 2px;
+}
+
+ul {
+  list-style: armenian;
+  
+}
